# full-stack-fastapi-template

./: .env  .env.path-based-api  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  Tiltfile  compose.yml  deployment.md  development-tilt.md  development.md  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  k3d-config.yaml  pyproject.toml  pyrightconfig.json  release-notes.md  renovate.json
backend/: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.build  Dockerfile.builder  Dockerfile.requirements  Dockerfile.standard  README.md  builder_entrypoint.sh  install_dependencies.sh  pyproject.toml  tests-start.sh
backend/app/: Dockerfile.depot-betterproto  aws_utils.py  builder.py  builder_utils.py  cloudflare_utils.py  crud.py  depot_client.py  docker_builder.py  main.py  messenger.py  models.py  nats.py  nats_prestart.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 073992e79634_add_column_deleted_at_to_app_model.py  0aa1b2f3680c_add_default_false_for_registered_from_.py  20493afff640_add_new_statuses.py  24bbf72483ad_add_column_cleaned_up_at_to_app_model.py  2e7525f9d21b_add_username_and_is_verified_column_.py  30a55259019b_add_column_personal_team_id_to_user_.py  341d6070ddb9_add_app_and_deployment_models.py  35527fb53dc1_add_environment_variable_model.py  3a7df55f39d3_add_invitations_table.py  40184bc09d86_add_enum_ready_for_deploy_to_deployment_.py  4df8ae4a83c0_merge_heads.py  4f7bee4fb432_add_waiting_user_list_model.py  56310da83983_add_organization_table_and_.py  67c32b690671_add_provider_username_to_social_accounts.py  6a95f195ffb2_add_status_on_apps.py  6eb318701c26_merge_heads.py  73623a80510e_remove_column_status_from_app_model.py  89c9a00d523e_initial_setup.py  954dd9bb6388_add_token_information_to_accounts.py  991ccb025dd3_update_waitlist_fields.py  9dbdefbcdca4_add_timezone_support_for_datetimes.py  a17996bd5bff_merge_heads.py  a63c538f8962_add_created_at_to_team.py  a9b76125b71a_remove_is_superuser_from_user_table_and_.py  b252a79ae9da_increase_max_size_of_waitinglistuser_.py  b5fdf66dc755_add_newsletter_synced_at_to_.py  b7b546eac017_add_created_at_to_team.py  (+7 more)
backend/app/api/: deps.py  main.py
backend/app/builder/: builder_utils.py  main.py  models.py
backend/app/core/: config.py  db.py  exceptions.py  security.py
backend/app/messenger/: __main__.py  processing.py  retries.py
backend/app/tests/: conftest.py  test_dev_emails.py
backend/builder-context/: Dockerfile  install_dependencies.sh
backend/scripts/: lint.sh  prestart-local.sh  setup-db.sh  tests-start.sh
backend/tests/: conftest.py  test_dev_emails.py
backend/tests/builder/: conftest.py  test_build.py  test_cleanup.py
backend/tests/crud/: test_user.py
backend/tests/messenger/: test_main.py  test_process_message.py
backend/tests/models/: test_app.py  test_deployment.py
backend/tests/utils/: apps.py  team.py  user.py  utils.py
(+599 files in other folders)
